[tool.poetry]
name = "splatoon2_death_docker"
version = "0.1.0"
description = "スプラトゥーン2のプレイ動画から、やられる直前30秒の動画を作成する"
authors = ["Haruhiko Takada"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "^2.9.1"
opencv-python = "^4.5.5"
numpy = "^1.22.4"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
